Refactor code for consistency and readability; update deployment guides and scripts
- Standardized import statements and added semicolons in TypeScript files.
- Improved formatting and readability in HeroSection and LiveKitConsultation components.
- Enhanced error handling and connection logic in useConsultation and useConnection hooks.
- Created comprehensive deployment guide for frontend and backend, including DigitalOcean and Railway options.
- Added deployment scripts (deploy.bat and deploy.sh) for easier setup.
- Configured environment variables for backend deployment in DigitalOcean, Railway, and Render.
- Documented backend architecture and design considerations in ARCHITECTURE.md.

--- a/oris-ai-backend/docker-compose.yml
+++ b/oris-ai-backend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   oris-ai-backend:
@@ -16,7 +16,13 @@ services:
     networks:
       - oris-ai-network
     healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8000/health')"]
+      test:
+        [
+          "CMD",
+          "python",
+          "-c",
+          "import requests; requests.get('http://localhost:8000/health')",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
